ansible-roboshop-roles - catalogue

--- a/main.yaml
+++ b/main.yaml
@@ -1,7 +1,6 @@
 - name: Installing Roboshop project
-  hosts: mongodb
+  hosts: "{{component}}"
   become: yes
   roles:
-  - mongodb
+  - "{{component}}"
 
-  
