--- a/roles/catalogue/tasks/main.yaml
+++ b/roles/catalogue/tasks/main.yaml
@@ -14,3 +14,20 @@
     name: common 
     tasks_from: app-setup
 
+- name: install dependencies npm
+    ansible.builtin.command: npm install
+    args: 
+      chdir: /app
+
+- name: systemd setup  
+  ansible.builtin.import_role:
+    name: common 
+    tasks_from: systemd-setup
+
+- name: load mongo schema  
+  ansible.builtin.import_role:
+    name: common 
+    tasks_from: load-mongoschema
+
+
+
