--- a/roles/common/tasks/systemd-setup.yaml
+++ b/roles/common/tasks/systemd-setup.yaml
@@ -1,6 +1,14 @@
-  - name: demon reload 
-    ansible.builtin.systemd_service:
+  - name: "Copy {{component}} services"
+    ansible.builtin.copy:
+      src: "{{component}}.service"
+      dest: /etc/systemd/system/{{component}}.service
+ 
+ 
+ - name: demon reload 
+    ansible.builtin.systemd:
       daemon_reload: true
+      state: restarted
+      name: "{{component}}"
 
   - name: "start and enable {{component}}" 
     ansible.builtin.service: 
