--- a/roles/common/tasks/load-mongoschema.yaml
+++ b/roles/common/tasks/load-mongoschema.yaml
@@ -2,6 +2,7 @@
     ansible.builtin.copy:
       src: mongodb.repo
       dest: /etc/yum.repos.d/mongo.repo
+      remote_src: yes
   
   - name: install mongodb
     ansible.builtin.yum: 
