--- a/roles/common/tasks/load-mysql-schema.yaml
+++ b/roles/common/tasks/load-mysql-schema.yaml
@@ -4,4 +4,4 @@
     state: installed
 
 - name: loading schema shipping data 
-  ansible.builtin.shell: mysql -h mysql.nishalkdevops.online -uroot -pRoboShop@1 < /app/schema/shipping.sql 
+  ansible.builtin.shell: mysql -h mysql.nishalkdevops.online -uroot -pRoboShop@1 < /app/schema/{{component}}.sql 
